python/testData/highlighting/breakOutsideOfLoop.py
for x in []:
    def foo(x):
        <error descr="'break' outside loop">break</error>